Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56010

Drawer: cannot drag to close from the outside on touch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.1
    • 5.7
    • Quick: Controls 2
    • None
    • Touch
    • 541a7a8e785476e2e93f88f770715f25ce7e6dc8

      A touch device is needed to reproduce this.

      Steps:

      • open the drawer
      • drag from the outside of the drawer, towards the left window edge

      Expected:

      • the drawer follows the finger and closes

      Actual:

      • the drawer does not move, unless dragged from inside it
      import QtQuick 2.7
      import QtQuick.Window 2.2
      import QtQuick.Layouts 1.3
      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          id: window
          width: 360
          height: 360
          visible: true
      
          Drawer {
              id: drawer
              width: window.width * 0.8
              height: window.height
          }
      
          Button {
              text: "Open"
              onClicked: drawer.open()
              anchors.centerIn: parent
          }
      }
      

        For Gerrit Dashboard: QTBUG-56010
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes